
* Add x_accel_expires pragma to set X-Accel-Expires header for nginx proxy caching.

* Remove non-header from BounceReferrals HTTP response headers, which
  breaks output with newer Apache versions.

* Support recipient addresses in CC and BCC when using Net::SMTP.

* Make Interchange reopen debug.log/STDERR when receiving HUP signal.

* Fix race conditions in timed-build output.


Payments
--------

* Add BIN-2 MasterCard number support to Vend::Order, catalog templates,
  admin, and Vend::Payment modules which require it.

* Remove defunct payment services: Vend::Payment::ECHO and Vend::Payment::Skipjack.

* Updated Vend::Payment::PayPal to latest available version.

* New Braintree payment module.

* Add Gateway Log feature for logging full details of payment gateway requests/
  responses. (See extended section about the GatewayLog later in this document.)


Database
--------

* Support newer versions of MySQL.

* Allow admin user to export specific tables using [backup-database] despite
  current NoExportExternal setting.

* Add ability to have a NO_UPDATE field in SQL tables, which field will
  not affect a TIMESTAMP field (in MySQL or Postgres, at least).

  Intended to allow mod_time in user logins to be updated without
  changing a timestamp field. May have other uses, but is only
  honored at this time in the set_field() method, so has limited
  applicability.

  Assuming one has a timestamp field in the userdb table called
  "update_date", this is effected by changing the configuration as:

    Database userdb  TIMESTAMP_FIELD  update_date
    Database userdb  NO_UPDATE        mod_time

* Add ability to return after Preload and Autoload routines.
  Setting $Vend::PreloadReturn or $Vend::AutoloadReturn (i.e.
  they are defined) means Vend::Dispatch::dispatch() will 
  return that status. This allows features like QueryCache
  and others that are hooked via Preload or Autoload.

* Add skeleton module Vend::InDev, which does nothing but set a single